--- a/core/components/translex/elements/chunks/translexinterface.html
+++ b/core/components/translex/elements/chunks/translexinterface.html
@@ -46,8 +46,8 @@
 </head>
 <body>
 <a name="top"></a>
-<h2>[[%translex.settings_header? &namespace=`translex`]]</h2>
-<p id="translex_p_intro">[[%translex.settings_intro? &namespace=`translex`]]</p>
+<h2>[[%translex.header? &namespace=`translex`]]</h2>
+<p id="translex_p_intro">[[%translex.intro? &namespace=`translex`]]</p>
 <div id="translex_div_error"></div>
 <div class="clear"></div>
 <div class="translex_div_selects">
@@ -67,10 +67,10 @@
     </form>
 </div>
 <div class="translex_div_buttons">
-    <button class="translex_btn_save">[[%translex.save? &namespace=`translex`]]</button>
+    <button class="translex_btn_save">[[%translex.btn_save? &namespace=`translex`]]</button>
     [[!+modx.user.id:is=`1`:then=`
     &nbsp;
-    <button class="translex_btn_live">[[%translex.make_live? &namespace=`translex`]]</button>
+    <button class="translex_btn_live">[[%translex.btn_make_live? &namespace=`translex`]]</button>
     `]]
 </div>
 <div class="clear"></div>
